1. Added additional custom icon 2. Resolved the expand/collapse feature

--- a/src/app/shared/tile/tile.component.scss
+++ b/src/app/shared/tile/tile.component.scss
@@ -37,3 +37,15 @@
 .tile-back {
   padding: 10px;
 }
+
+.expand-collapse {
+    font-size: 22px;
+}
+
+.expand-collapse-rotate-exp-90 {
+    transform: rotate(90deg);
+}
+
+.expand-collapse-rotate-cps-90 {
+    transform: rotate(-90deg);
+}
